refactor: correcao de code smells